complete all five questions

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <option>big</option>
             <option>small</option>
             </select>
+            <br>         
 
 
           <p>Do you want to focus on front_end or back-end development?</p>
@@ -37,6 +38,9 @@
             <option>back-end</option>
             <option>I don't know</option>
             </select>
+            <br>
+
+
 
           <p>Do you want to learn a language that has been used only in USA or world wide?</p>
           <div class="radio">
@@ -51,14 +55,27 @@
               World-Wide
             </label>
           </div>
+          <br>
 
 
-          <button type="submit" class="btn-success">See the Result!</button>
-        </form>
+        <p>Do you want to work on server-side or creatin applications?</p>
+        <div class="radio">
+          <label>
+            <input type="radio" name="flavor" value="server-side" checked>
+            server-side
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="flavor" value="applications">
+            applications
+          </label>
+        </div>
+        <br>
 
 
-
-
+        <button type="submit" class="btn-success">See the Result!</button>
+      </form>
 
 
 
