--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <option>big</option>
             <option>small</option>
             </select>
-            <br>         
+            <br>
 
 
           <p>Do you want to focus on front_end or back-end development?</p>
@@ -42,17 +42,17 @@
 
 
 
-          <p>Do you want to learn a language that has been used only in USA or world wide?</p>
+          <p>Do you want to study full time or part time?</p>
           <div class="radio">
             <label>
-              <input type="radio" name="flavor" value="USA" checked>
-              USA
+              <input type="radio" name="fullTime-PartTime" value="Full-time" checked>
+              Full-time
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="flavor" value="World-Wide">
-              World-Wide
+              <input type="radio" name="fullTime-PartTime" value="Part-time">
+              Part-time
             </label>
           </div>
           <br>
@@ -61,13 +61,13 @@
         <p>Do you want to work on server-side or creatin applications?</p>
         <div class="radio">
           <label>
-            <input type="radio" name="flavor" value="server-side" checked>
+            <input type="radio" name="which-side" value="server-side" checked>
             server-side
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="flavor" value="applications">
+            <input type="radio" name="which-side" value="applications">
             applications
           </label>
         </div>
@@ -80,19 +80,18 @@
 
 
         <ul id="suggestionOne">
+          <li>css and desing classes</li>
 
 
 
 
         </ul>
-
         <ul id="suggestionTwo">
 
 
 
 
         </ul>
-
         <ul id=suggestionThree>
 
 
