make the first suggestion

--- a/index.html
+++ b/index.html
@@ -76,24 +76,26 @@
 
         <button type="submit" class="btn-success">See the Result!</button>
       </form>
-
+      <br>
+      <br>
 
 
         <ul id="suggestionOne">
-          <li>css and desing classes</li>
+          <h2>Our suggestion for you is to take :</h2>
+          <li>CSS/Design</li>
 
 
 
 
         </ul>
         <ul id="suggestionTwo">
-
+          <li>PHP/Drupal</li>
 
 
 
         </ul>
         <ul id=suggestionThree>
-
+          <li>Ruby/Rails</li>
 
 
         </ul>
