add the second and third suggestions

--- a/index.html
+++ b/index.html
@@ -26,16 +26,17 @@
 
           <p>Are you wishing to work in a big company or a small company?</p>
           <select class="form-control" id="bigOrSmall">
-            <option>big</option>
-            <option>small</option>
+            <option>Big</option>
+            <option>Small</option>
+            <option>No-matter</option>
             </select>
             <br>
 
 
           <p>Do you want to focus on front_end or back-end development?</p>
           <select class="form-control" id="frontEnd-backEnd">
-            <option>front-end</option>
-            <option>back-end</option>
+            <option>Front-end</option>
+            <option>Back-end</option>
             <option>I don't know</option>
             </select>
             <br>
@@ -45,13 +46,13 @@
           <p>Do you want to study full time or part time?</p>
           <div class="radio">
             <label>
-              <input type="radio" name="fullTime-PartTime" value="Full-time" checked>
+              <input type="radio" name="FullTime-PartTime" value="Full-time" checked>
               Full-time
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="fullTime-PartTime" value="Part-time">
+              <input type="radio" name="FullTime-PartTime" value="Part-time">
               Part-time
             </label>
           </div>
@@ -61,14 +62,14 @@
         <p>Do you want to work on server-side or creatin applications?</p>
         <div class="radio">
           <label>
-            <input type="radio" name="which-side" value="server-side" checked>
-            server-side
+            <input type="radio" name="which-side" value="Server-side" checked>
+            Server-side
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="which-side" value="applications">
-            applications
+            <input type="radio" name="which-side" value="Applications">
+            Applications
           </label>
         </div>
         <br>
@@ -89,13 +90,15 @@
 
         </ul>
         <ul id="suggestionTwo">
+          <h2>Our suggestion for you is to take :</h2>
           <li>PHP/Drupal</li>
 
 
 
         </ul>
         <ul id=suggestionThree>
-          <li>Ruby/Rails</li>
+          <h2>Our suggestion for you is to take :</h2>
+          <li>Java/Android</li>
 
 
         </ul>
