add greay background color

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <div class="container">
-        <h3>Welcome to Epicodus webpage.</h3>
+        <h2>Welcome to Epicodus Webpage</h2>
+        <br>
+        <br>
         <h5>Please answer the 5 questions below to find which language is the right language for you to learn.<h5>
 
         <form id="student">
@@ -82,7 +84,7 @@
 
 
         <ul id="suggestionOne">
-          <h2>Our suggestion for you is to take :</h2>
+          <h3>Our suggestion for you is to take :</h3>
           <li>CSS/Design</li>
 
 
@@ -90,14 +92,14 @@
 
         </ul>
         <ul id="suggestionTwo">
-          <h2>Our suggestion for you is to take :</h2>
+          <h3>Our suggestion for you is to take :</h3>
           <li>PHP/Drupal</li>
 
 
 
         </ul>
         <ul id=suggestionThree>
-          <h2>Our suggestion for you is to take :</h2>
+          <h3>Our suggestion for you is to take :</h3>
           <li>Java/Android</li>
 
 
