fix forth suggestion

--- a/index.html
+++ b/index.html
@@ -16,15 +16,11 @@
         <h5>Please answer the 5 questions below to find which language is the right language for you to learn.<h5>
 
         <form id="student">
-
-
           <p>How old are you?</p>
           <div class="form-group">
             <label for="input1">age:</label>
             <input id="age" class="form-control" type="text">
           </div>
-
-
 
           <p>Are you wishing to work in a big company or a small company?</p>
           <select class="form-control" id="bigOrSmall">
@@ -34,7 +30,6 @@
             </select>
             <br>
 
-
           <p>Do you want to focus on front_end or back-end development?</p>
           <select class="form-control" id="frontEnd-backEnd">
             <option>Front-end</option>
@@ -43,8 +38,6 @@
             </select>
             <br>
 
-
-
           <p>Do you want to study full time or part time?</p>
           <div class="radio">
             <label>
@@ -52,16 +45,12 @@
               Full-time
             </label>
           </div>
-
-
           <div class="radio">
             <label>
               <input type="radio" name="FullTime-PartTime" value="Part-time">
               Part-time
             </label>
           </div>
-
-
           <div class="radio">
             <label>
               <input type="radio" name="FullTime-PartTime" value="Part-time">
@@ -70,7 +59,7 @@
           </div>
           <br>
 
-        <p>Do you want to work on server-side or creatin applications?</p>
+        <p>Do you want to work on server-side or creating applications?</p>
         <div class="radio">
           <label>
             <input type="radio" name="which-side" value="Server-side" checked>
@@ -84,37 +73,30 @@
           </label>
         </div>
         <br>
-
-
         <button type="submit" class="btn-success">See the Result!</button>
       </form>
       <br>
       <br>
 
-
-        <ul id="suggestionOne">
+        <div id="suggestionOne">
           <h3>Our suggestion for you is to take :</h3>
           <li>CSS/Design</li>
-        </ul>
+        </div>
 
-        <ul id="suggestionTwo">
+        <div id="suggestionTwo">
           <h3>Our suggestion for you is to take :</h3>
           <li>PHP/Drupal</li>
-        </ul>
+        </div>
 
-        <ul id=suggestionThree>
+        <div id=suggestionThree>
           <h3>Our suggestion for you is to take :</h3>
           <li>Java/Android</li>
-        </ul>
+        </div>
 
-        <ul id=suggestionFour>
+        <div id=suggestionFour>
           <h3>Our suggestion for you is to take :</h3>
           <li>C#/.NET</li>
-        </ul>
-
-
-
-
+        </div>
 
     </div>
   </body>
