add image to suggetions

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
         <div id=suggestionFour>
           <h3>Our suggestion for you is to take :</h3>
           <li>C#/.NET</li>
+          <p>If you would like to see our classroom please click here.</p>
+          <img src="img/pic.jpg" alt="Epicodus classroom">
         </div>
 
     </div>
