--- a/index.html
+++ b/index.html
@@ -81,22 +81,68 @@
         <div id="suggestionOne">
           <h3>Our suggestion for you is to take :</h3>
           <li>CSS/Design</li>
+          <br>
+          <br>
+          <p>Also here is a list of all tracks we offer in Portland and Seattle:</p>
+          <ul>
+            <li>Ruby/Rails</li>
+            <li>PHP/Drupal</li>
+            <li>Java/Android</li>
+            <li>CSS/Design</li>
+            <li>C#/.NET</li>
+          </ul>
+          <p>If you would like to see our classroom please click <span class = clickable>here</span> .</p>
+          <img src="img/pic.jpg" alt="Epicodus classroom">
         </div>
 
         <div id="suggestionTwo">
           <h3>Our suggestion for you is to take :</h3>
           <li>PHP/Drupal</li>
+          <br>
+          <br>
+          <p>Also here is a list of all tracks we offer in Portland and Seattle:</p>
+          <ul>
+            <li>Ruby/Rails</li>
+            <li>PHP/Drupal</li>
+            <li>Java/Android</li>
+            <li>CSS/Design</li>
+            <li>C#/.NET</li>
+          </ul>
+          <p>If you would like to see our classroom please click <span class = clickable>here</span> .</p>
+          <img src="img/pic.jpg" alt="Epicodus classroom">
         </div>
 
         <div id=suggestionThree>
           <h3>Our suggestion for you is to take :</h3>
           <li>Java/Android</li>
+          <br>
+          <br>
+          <p>Also here is a list of all tracks we offer in Portland and Seattle:</p>
+          <ul>
+            <li>Ruby/Rails</li>
+            <li>PHP/Drupal</li>
+            <li>Java/Android</li>
+            <li>CSS/Design</li>
+            <li>C#/.NET</li>
+          </ul>
+          <p>If you would like to see our classroom please click <span class = clickable>here</span> .</p>
+          <img src="img/pic.jpg" alt="Epicodus classroom">
         </div>
 
         <div id=suggestionFour>
           <h3>Our suggestion for you is to take :</h3>
           <li>C#/.NET</li>
-          <p>If you would like to see our classroom please click here.</p>
+          <br>
+          <br>
+          <p>Also here is a list of all tracks we offer in Portland and Seattle:</p>
+          <ul>
+            <li>Ruby/Rails</li>
+            <li>PHP/Drupal</li>
+            <li>Java/Android</li>
+            <li>CSS/Design</li>
+            <li>C#/.NET</li>
+          </ul>
+          <p>If you would like to see our classroom please click <span class = clickable>here</span> .</p>
           <img src="img/pic.jpg" alt="Epicodus classroom">
         </div>
 
